# catcoder

./: .gitignore  README.md
catcoder/: .env.example  __init__.py  check_runtime.py  pyproject.toml  requirements.txt
catcoder/java/: __init__.py  evaluation.py  inference.py
catcoder/rust/: __init__.py  evaluation.py  inference.py
catcoder/tests/: test_inference_compat.py
